--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,36 @@
-.citizens {
-  max-width: 900px;
-  margin: 0 auto;
-  padding-top: 30px;
+li {
+  list-style-type: none;
+  margin-left: 80px;
+  padding-left: 10px;
 }
-.citizen {
-  display: flex;
-  justify-content: space-between;
+
+ul {
   margin-bottom: 20px;
+  display: block;
+  cursor: default;
+}
+
+.citizen {
+  max-width: 1120px;
+  margin: 0 auto;
+}
+
+.citizen-data-item {
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.tooltipWrapper {
+  position: relative;
+}
+
+.tooltip {
+  position: absolute;
+  bottom: 10px;
+  left: 80px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 5px;
+  width: 200px;
+  color: aliceblue;
+  padding: 10px;
 }
